Additional changes 7th jan 2026